welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:6: error: not found: value poseBrosse
		setCouleurBrosse(c); poseBrosse(); leveBrosse()
                                     ^